@@ -340,7 +340,7 @@
                    (int    . ,%ffi-call->int))))
 
 (define checker-ht (alist->eq-hash-table
-                    `((void*  . ,(lambda (x) (and (pointer? x) x)))
+                    `((void*  . ,(lambda (x) (and (or (pointer? x) (bytevector? x)) x)))
                       (int    . ,(lambda (x) (and (integer? x) x)))
                       (double . ,(lambda (x) (cond
                                               [(flonum? x) x]
